updated the env for OBJECTSTORE_PASSWORD and port number

--- a/.jenkins/docker-compose.yml
+++ b/.jenkins/docker-compose.yml
@@ -23,7 +23,7 @@ importer:
     DB_NAME: tellus
     DB_USER: tellus
     DB_PASSWORD: insecure
-    OBJECTSTORE_PASSWORD:
+    TELLUS_OBJECTSTORE_PASSWORD:
   command: >
     bash -c "/app/docker-wait.sh \
             && python manage.py migrate \
