--- a/.jenkins/docker-compose.yml
+++ b/.jenkins/docker-compose.yml
@@ -16,13 +16,13 @@ database:
 #  command: /app/docker-test.sh
 
 importer:
-  build: ../web
+  image: build.datapunt.amsterdam.nl:5000/datapunt/tellus:${ENVIRONMENT}
   links:
     - database:database
   environment:
-    DB_NAME: tellus
-    DB_USER: tellus
-    DB_PASSWORD: insecure
+    DATABASE_NAME: tellus
+    DATABASE_USER: tellus
+    DATABASE_PASSWORD: insecure
     TELLUS_OBJECTSTORE_PASSWORD:
   command: >
     bash -c "/app/docker-wait.sh \
