--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ web:
     - database:database
   environment:
     SECRET_KEY: hoi
-    DB_NAME: tellus
-    DB_USER: tellus
-    DB_PASSWORD: insecure
+    DATABASE_NAME: tellus
+    DATABASE_USER: tellus
+    DATABASE_PASSWORD: insecure
     TELLUS_OBJECTSTORE_PASSWORD:
