Renamed OBJECTSTORE_PASSWORD to TELLUS_OBJECTSTORE_PASSWORD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,4 @@ web:
     DATABASE_NAME: tellus
     DATABASE_USER: tellus
     DATABASE_PASSWORD: insecure
-    TELLUS_OBJECTSTORE_PASSWORD:
+    TELLUS_OBJECTSTORE_PASSWORD: insecure
