added env TELLUS_OBJECTSTORE_PASSWORD to dockerFile

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -2,6 +2,8 @@ FROM amsterdam/docker_python:latest
 MAINTAINER datapunt.ois@amsterdam.nl
 
 ENV PYTHONUNBUFFERED 1
+ARG TELLUS_OBJECTSTORE_PASSWORD
+ENV TELLUS_OBJECTSTORE_PASSWORD=$TELLUS_OBJECTSTORE_PASSWORD
 
 EXPOSE 8000
 
