--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -23,3 +23,5 @@ python_swiftclient==3.2.0
 django-composite-foreignkey==1.0.0a10
 openpyxl==2.4.1
 python-keystoneclient==3.8.0
+dateutils==0.6.6
+python-dateutil==2.6.0
