--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -24,3 +24,6 @@ openpyxl==2.4.1
 python-keystoneclient==3.8.0
 dateutils==0.6.6
 python-dateutil==2.6.0
+flake8==3.2.1
+pylint==1.6.5
+pylint-django==0.7.2
