added flake8 setup

--- a/.jenkins/docker-compose.yml
+++ b/.jenkins/docker-compose.yml
@@ -5,15 +5,16 @@ database:
     POSTGRES_USER: tellus
 
 
-#tests:
-#  build: ../web
-#  links:
-#    - database:database
-#  environment:
-#    DB_NAME: tellus
-#    DB_USER: tellus
-#    DB_PASSWORD: insecure
-#  command: /app/docker-test.sh
+tests:
+  build: ../web
+  links:
+    - database:database
+  environment:
+    DB_NAME: tellus
+    DB_USER: tellus
+    DB_PASSWORD: insecure
+  command: >
+    bash -c "cd /app && ./docker-code-check.sh && ./docker-test.sh"
 
 importer:
   image: build.datapunt.amsterdam.nl:5000/datapunt/tellus:${ENVIRONMENT}
