--- a/.jenkins-test/docker-compose.yml
+++ b/.jenkins-test/docker-compose.yml
@@ -1,16 +1,18 @@
-database:
-  image: build.datapunt.amsterdam.nl:5000/atlas/postgres
-  environment:
-    POSTGRES_PASSWORD: insecure
-    POSTGRES_USER: tellus
+version: "3.0"
+services:
+  database:
+    image: build.datapunt.amsterdam.nl:5000/atlas/postgres
+    environment:
+      POSTGRES_PASSWORD: insecure
+      POSTGRES_USER: tellus
 
-tests:
-  build: ../web
-  links:
-    - database:database
-  environment:
-    DB_NAME: tellus
-    DB_USER: tellus
-    DB_PASSWORD: insecure
-  command: >
-    bash -c "cd /app && ./docker-code-check.sh && ./docker-test.sh"
+  tests:
+    build: ../web
+    links:
+      - database
+    environment:
+      DB_NAME: tellus
+      DB_USER: tellus
+      DB_PASSWORD: insecure
+    command: >
+      bash -c "cd /app && ./docker-code-check.sh && ./docker-test.sh"
