--- a/.jenkins-test/docker-compose.yml
+++ b/.jenkins-test/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     links:
       - database
     environment:
-      DB_NAME: tellus
-      DB_USER: tellus
-      DB_PASSWORD: insecure
+      DATABASE_NAME: tellus
+      DATABASE_USER: tellus
+      DATABASE_PASSWORD: insecure
     command: >
       bash -c "cd /app && ./docker-code-check.sh && ./docker-test.sh"
