add django tables in db transfer

--- a/web/.jenkins-import/docker-compose.yml
+++ b/web/.jenkins-import/docker-compose.yml
@@ -37,7 +37,8 @@ services:
                           -Fc \
                           -t tellus* \
                           -t geo*  \
-                          -T django*  \
+                          -t django_migrations  \
+                          -t django_site \
                           -T auth*    \
                           -U tellus \
                           -h db -p 5432 \
