--- a/web/tellus_app/flake.cfg
+++ b/web/tellus_app/flake.cfg
@@ -2,7 +2,7 @@
 #ignore=E501,E225,E261,W391,E241,E203,W292,W391
 #ignore=E501
 
-exclude=.git,migrations,docs,scripts
+exclude=.git,migrations,docs,scripts,.uwsgi_plugins_builders
 max-complexity=6
 max-line-length = 119
 statistics=True
