--- a/.jenkins-test/docker-compose.yml
+++ b/.jenkins-test/docker-compose.yml
@@ -15,4 +15,4 @@ services:
       DATABASE_USER: tellus
       DATABASE_PASSWORD: insecure
     command: >
-      bash -c "cd /app && ./docker-code-check.sh && ./docker-test.sh"
+      bash -c "cd /app && ./docker-wait.sh && ./docker-code-check.sh && ./docker-test.sh"
