#536 - updated to dc 3.0

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,4 +28,4 @@ services:
       - UWSGI_MODULE=tellus.wsgi:application
       - UWSGI_MASTER=1
       - UWSGI_STATIC_MAP=/static=/static
-      - JWT_SHARED_SECRET_KEY=${JWT_SHARED_SECRET_KEY: -ecuresniinsecure}
+      - JWT_SHARED_SECRET_KEY=ecuresniinsecure
