--- a/web/.jenkins-import/docker-compose.yml
+++ b/web/.jenkins-import/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.0"
 services:
   database:
-    image: build.datapunt.amsterdam.nl:5000/atlas/postgres
+    image: amsterdam/postgres
     environment:
       POSTGRES_PASSWORD: insecure
       POSTGRES_USER: tellus
@@ -27,7 +27,7 @@ services:
               && python import_validator.py"
 
   db-backup:
-    image: build.datapunt.amsterdam.nl:5000/atlas/postgres
+    image: amsterdam/postgres
     links:
       - database:db
     volumes:
