--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,32 +1,32 @@
-click==6.6
-coreapi==2.0.8
-coverage==4.2
-datapunt-authorization-django==0.2.17
-datapunt-authorization-levels==0.1.3
-dateutils==0.6.6
-django-braces==1.10.0
-django-debug-toolbar==1.6
-django-extensions==1.7.4
-django-filter==1.0.2
-django-jenkins==0.110.0
-django-shotgun==0.2
-django-sql-explorer==1.0
-Django==1.11.5
-djangorestframework-gis==0.10.1
-djangorestframework==3.5.2
-drf-extensions==0.3.1
-drf-hal-json==0.9.1
-factory-boy==2.7.0
-fake-factory==0.7.2
-flake8==3.3.0
-Markdown==2.6.7
-openapi-codec==1.2.1
-openpyxl==2.4.1
-psycopg2==2.6.2
-python-dateutil==2.6.0
-python-keystoneclient==3.8.0
-python_swiftclient==3.2.0
-PyYAML==3.12
-sqlparse==0.2.2
-uritemplate==3.0.0
-urllib3==1.21.1
+coreapi
+requests
+coverage
+datapunt-authorization-django
+datapunt-authorization-levels
+dateutils
+django-braces
+django-debug-toolbar
+django-extensions
+django-filter
+django-jenkins
+django-shotgun
+django-sql-explorer
+Django
+djangorestframework-gis
+djangorestframework
+drf-extensions
+drf-hal-json
+factory-boy
+Faker
+flake8
+Markdown
+openapi-codec
+openpyxl
+psycopg2-binary
+python-dateutil
+python-keystoneclient
+python_swiftclient
+PyYAML
+sqlparse
+uritemplate
+urllib3
