--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,32 +1,80 @@
-coreapi
-requests
-coverage
-datapunt-authorization-django
-datapunt-authorization-levels
-dateutils
-django-braces
-django-debug-toolbar
-django-extensions
-django-filter
-django-jenkins
-django-shotgun
-django-sql-explorer
-Django
-djangorestframework-gis
-djangorestframework
-drf-extensions
-drf-hal-json
-factory-boy
-Faker
-flake8
-Markdown
-openapi-codec
-openpyxl
-psycopg2-binary
-python-dateutil
-python-keystoneclient
-python_swiftclient
-PyYAML
-sqlparse
-uritemplate
-urllib3
+asn1crypto==0.24.0
+Babel==2.6.0
+certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+coverage==4.5.1
+cryptography==2.3.1
+datapunt-authorization-django==0.2.23
+datapunt-authorization-levels==0.1.3
+dateutils==0.6.6
+debtcollector==1.20.0
+defusedxml==0.5.0
+Django==2.1.1
+django-braces==1.13.0
+django-debug-toolbar==1.9.1
+django-extensions==2.1.2
+django-filter==2.0.0
+django-jenkins==0.110.0
+django-shotgun==0.2
+django-sql-explorer==1.1.2
+djangorestframework==3.8.2
+djangorestframework-csv==2.1.0
+djangorestframework-gis==0.13
+djangorestframework-xml==1.3.0
+drf-amsterdam==0.1.3
+drf-extensions==0.3.1
+drf-hal-json==0.9.1
+drf-nested-fields==0.9.4
+et-xmlfile==1.0.1
+factory-boy==2.11.1
+Faker==0.9.0
+flake8==3.5.0
+idna==2.7
+iso8601==0.1.12
+itypes==1.1.0
+jdcal==1.4
+Jinja2==2.10
+keystoneauth1==3.10.0
+Markdown==2.6.11
+MarkupSafe==1.0
+mccabe==0.6.1
+monotonic==1.5
+msgpack==0.5.6
+netaddr==0.7.19
+netifaces==0.10.7
+openapi-codec==1.3.2
+openpyxl==2.5.6
+os-service-types==1.3.0
+oslo.config==6.4.0
+oslo.i18n==3.21.0
+oslo.serialization==2.27.0
+oslo.utils==3.36.4
+packaging==17.1
+pbr==4.2.0
+pip-review==1.0
+psycopg2-binary==2.7.5
+pycodestyle==2.3.1
+pycparser==2.18
+pyflakes==1.6.0
+PyJWT==1.6.4
+pyparsing==2.2.0
+python-dateutil==2.7.3
+python-keystoneclient==3.17.0
+python-swiftclient==3.6.0
+pytz==2018.5
+PyYAML==3.13
+requests==2.19.1
+rfc3986==1.1.0
+six==1.11.0
+sphinx-me==0.3
+sqlparse==0.2.4
+stevedore==1.29.0
+text-unidecode==1.2
+unicodecsv==0.14.1
+uritemplate==3.0.0
+urllib3==1.23
+Werkzeug==0.14.1
+wrapt==1.10.11
