--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -65,7 +65,7 @@ python-dateutil==2.7.3
 python-keystoneclient==3.17.0
 python-swiftclient==3.6.0
 pytz==2018.5
-PyYAML==3.13
+PyYAML==4.2b4
 requests==2.20.0
 rfc3986==1.1.0
 six==1.11.0
