--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - TELLUS_OBJECTSTORE_PASSWORD=insecure
       - CONSUL_HOST=${CONSUL_HOST:-notset}
       - CONSUL_PORT=${CONSUL_PORT:-8500}
-      - UWSGI_HTTP="0.0.0.0:8000"
+      - UWSGI_HTTP=0.0.0.0:8000
       - UWSGI_MODULE=tellus.wsgi:application
       - UWSGI_MASTER=1
       - UWSGI_STATIC_MAP=/tellus/static=/static
