--- a/web/deploy/test/docker-compose.yml
+++ b/web/deploy/test/docker-compose.yml
@@ -14,5 +14,6 @@ services:
       DATABASE_NAME: tellus
       DATABASE_USER: tellus
       DATABASE_PASSWORD: insecure
-    command: >
-      bash -c "cd /app && /deploy/docker-wait.sh && ./docker-code-check.sh && ./docker-test.sh"
+    volumes:
+      - ./test-run.sh:/app/test-run.sh
+    command: /app/test-run.sh
