OP-459, Django settings module env set in Dockerfile

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -29,7 +29,7 @@ USER datapunt
 COPY tellus_app /app/
 COPY deploy /deploy/
 
-RUN export DJANGO_SETTINGS_MODULE=tellus.settings
+ENV DJANGO_SETTINGS_MODULE=tellus.settings
 
 CMD ["/deploy/docker-run.sh"]
 
