--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -19,7 +19,7 @@ django-filter==2.0.0
 django-jenkins==0.110.0
 django-shotgun==0.2
 django-sql-explorer==1.1.2
-djangorestframework==3.8.2
+djangorestframework==3.9.2
 djangorestframework-csv==2.1.0
 djangorestframework-gis==0.13
 djangorestframework-xml==1.3.0
@@ -78,3 +78,4 @@ urllib3==1.23
 Werkzeug==0.14.1
 wrapt==1.10.11
 sentry-sdk==0.7.6
+drf-yasg==1.14.0
