changed to new registry for imports

--- a/web/deploy/import/docker-compose.yml
+++ b/web/deploy/import/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./backups:/tmp/backups
 
   importer:
-    image: repo.data.amsterdam.nl/datapunt/tellus:${ENVIRONMENT}
+    image: ${DOCKER_REGISTRY_HOST}/datapunt/tellus:${ENVIRONMENT}
     links:
       - database
     environment:
