--- a/deploy/import/docker-compose.yml
+++ b/deploy/import/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   database:
     image: amsterdam/postgres11
     environment:
-      POSTGRES_PASSWORD: insecure
-      POSTGRES_USER: tellus
+      POSTGRES_PASSWORD: dev
+      POSTGRES_USER: dev
     volumes:
       - ./backups:/tmp/backups
 
@@ -14,11 +14,6 @@ services:
       - database
     environment:
       TELLUS_OBJECTSTORE_PASSWORD:
-      DATABASE_NAME: tellus
-      DATABASE_USER: tellus
-      DATABASE_PASSWORD: insecure
-      DATABASE_HOST_OVERRIDE: database
-      DATABASE_PORT_OVERRIDE: 5432
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.data.amsterdam.nl/}
     volumes:
       - ./import-run.sh:/app/import-run.sh
