--- a/deploy/import/docker-compose.yml
+++ b/deploy/import/docker-compose.yml
@@ -9,12 +9,11 @@ services:
       - ./backups:/tmp/backups
 
   importer:
-    image: ${DOCKER_REGISTRY_HOST}/datapunt/tellus:${ENVIRONMENT}
+    image: docker-registry.secure.amsterdam.nl/datapunt/tellus:${ENVIRONMENT}
     depends_on:
       - database
     environment:
       TELLUS_OBJECTSTORE_PASSWORD:
       DATAPUNT_API_URL: ${DATAPUNT_API_URL:-https://api.data.amsterdam.nl/}
-    volumes:
-      - ./import-run.sh:/app/import-run.sh
-    command: /app/import-run.sh
+      DJANGO_SETTINGS_MODULE: main.settings
+    command: /app/deploy/import/import-run.sh
