--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,3 +3,11 @@
 line-length = 88
 # Black will default to double quotes
 skip-string-normalization = true
+exclude = 'migrations'
+
+[tool.pytest.ini_options]
+addopts = "-v -ra -s --ff --nf --disable-pytest-warnings"
+
+[tool.isort]
+profile = "black"
+src_paths = ["src", "tests"]
