--- a/requirements.txt
+++ b/requirements.txt
@@ -11,45 +11,62 @@ cffi==1.14.2              # via cryptography
 chardet==3.0.4            # via requests
 coreapi==2.3.3            # via drf-yasg
 coreschema==0.0.4         # via coreapi, drf-yasg
-cryptography==3.0         # via jwcrypto
+cryptography==3.1         # via jwcrypto
 datapunt-authorization-django==1.0.0  # via -r requirements.in
 datapunt-authorization-levels==0.1.3  # via -r requirements.in
-dateutils==0.6.8          # via -r requirements.in
+dateutils==0.6.11         # via -r requirements.in
+debtcollector==2.2.0      # via oslo.config, oslo.utils, python-keystoneclient
 defusedxml==0.6.0         # via djangorestframework-xml
-django-extensions==3.0.5  # via -r requirements.in
+django-extensions==3.0.8  # via -r requirements.in
 django-filter==2.3.0      # via -r requirements.in
 django==3.0               # via -r requirements.in, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
 djangorestframework-csv==2.1.0  # via drf-amsterdam
-djangorestframework-gis==0.15  # via -r requirements.in
+djangorestframework-gis==0.16  # via -r requirements.in
 djangorestframework-xml==2.0.0  # via drf-amsterdam
 djangorestframework==3.11.1  # via djangorestframework-csv, djangorestframework-gis, drf-amsterdam, drf-extensions, drf-hal-json, drf-nested-fields, drf-yasg
-drf-amsterdam==0.3.2      # via -r requirements.in
+drf-amsterdam==0.4.0      # via -r requirements.in
 drf-extensions==0.6.0     # via drf-amsterdam
 drf-hal-json==0.10.0      # via -r requirements.in
 drf-nested-fields==0.9.5  # via drf-hal-json
 drf-yasg==1.17.1          # via -r requirements.in
 et-xmlfile==1.0.1         # via openpyxl
 idna==2.10                # via requests
-inflection==0.5.0         # via drf-yasg
+inflection==0.5.1         # via drf-yasg
+iso8601==0.1.13           # via keystoneauth1, oslo.utils
 itypes==1.2.0             # via coreapi
 jdcal==1.4.1              # via openpyxl
 jinja2==2.11.2            # via coreschema
-jwcrypto==0.7             # via -r requirements.in, datapunt-authorization-django
+jwcrypto==0.8             # via -r requirements.in, datapunt-authorization-django
+keystoneauth1==4.2.1      # via python-keystoneclient
 markupsafe==1.1.1         # via jinja2
-openpyxl==3.0.4           # via -r requirements.in
-packaging==20.4           # via drf-yasg
-psycopg2-binary==2.8.5    # via -r requirements.in
+msgpack==1.0.0            # via oslo.serialization
+netaddr==0.8.0            # via oslo.config, oslo.utils
+netifaces==0.10.9         # via oslo.utils
+openpyxl==3.0.5           # via -r requirements.in
+os-service-types==1.7.0   # via keystoneauth1
+oslo.config==8.3.2        # via python-keystoneclient
+oslo.i18n==5.0.1          # via oslo.config, oslo.utils, python-keystoneclient
+oslo.serialization==4.0.1  # via python-keystoneclient
+oslo.utils==4.6.0         # via oslo.serialization, python-keystoneclient
+packaging==20.4           # via drf-yasg, oslo.utils
+pbr==5.5.0                # via debtcollector, keystoneauth1, os-service-types, oslo.i18n, oslo.serialization, oslo.utils, python-keystoneclient, stevedore
+psycopg2-binary==2.8.6    # via -r requirements.in
 pycparser==2.20           # via cffi
-pyparsing==2.4.7          # via packaging
+pyparsing==2.4.7          # via oslo.utils, packaging
 python-dateutil==2.8.1    # via dateutils
-python-swiftclient==3.10.0  # via -r requirements.in
-pytz==2020.1              # via dateutils, django
-requests==2.24.0          # via coreapi, datapunt-authorization-django, python-swiftclient
-ruamel.yaml.clib==0.2.0   # via ruamel.yaml
-ruamel.yaml==0.16.10      # via drf-yasg
-sentry-sdk==0.16.5        # via -r requirements.in
-six==1.15.0               # via cryptography, djangorestframework-csv, drf-yasg, packaging, python-dateutil, python-swiftclient
+python-keystoneclient==4.1.1  # via -r requirements.in
+python-swiftclient==3.10.1  # via -r requirements.in
+pytz==2020.1              # via dateutils, django, oslo.serialization, oslo.utils
+pyyaml==5.3.1             # via oslo.config
+requests==2.24.0          # via coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
+rfc3986==1.4.0            # via oslo.config
+ruamel.yaml.clib==0.2.2   # via ruamel.yaml
+ruamel.yaml==0.16.12      # via drf-yasg
+sentry-sdk==0.17.5        # via -r requirements.in
+six==1.15.0               # via cryptography, debtcollector, djangorestframework-csv, drf-yasg, keystoneauth1, oslo.i18n, oslo.utils, packaging, python-dateutil, python-keystoneclient, python-swiftclient
 sqlparse==0.3.1           # via django
+stevedore==3.2.2          # via keystoneauth1, oslo.config, python-keystoneclient
 unicodecsv==0.14.1        # via djangorestframework-csv
 uritemplate==3.0.1        # via coreapi, drf-yasg
 urllib3==1.25.10          # via requests, sentry-sdk
+wrapt==1.12.1             # via debtcollector
