--- a/deploy/import/docker-compose.yml
+++ b/deploy/import/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./backups:/tmp/backups
 
   importer:
-    image: docker-registry.secure.amsterdam.nl/datapunt/tellus:${ENVIRONMENT}
+    image: docker-registry.data.amsterdam.nl/datapunt/tellus:${ENVIRONMENT}
     depends_on:
       - database
     environment:
