--- a/requirements.in
+++ b/requirements.in
@@ -2,7 +2,7 @@
 # See # https://git.datapunt.amsterdam.nl/Datapunt/python-best-practices/blob/master/dependency_management/
 
 # base
-Django
+Django<3.1
 psycopg2-binary
 sentry-sdk
 
