--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 #    pip-compile --output-file=requirements.txt requirements.in
 #
 argparse==1.4.0           # via dateutils
-asgiref==3.2.10           # via django
+asgiref==3.3.0            # via django
 certifi==2020.6.20        # via requests, sentry-sdk
 cffi==1.14.3              # via cryptography
 chardet==3.0.4            # via requests
@@ -23,7 +23,7 @@ django==3.0.10            # via -r requirements.in, datapunt-authorization-djang
 djangorestframework-csv==2.1.0  # via drf-amsterdam
 djangorestframework-gis==0.16  # via -r requirements.in
 djangorestframework-xml==2.0.0  # via drf-amsterdam
-djangorestframework==3.11.1  # via djangorestframework-csv, djangorestframework-gis, drf-amsterdam, drf-extensions, drf-hal-json, drf-nested-fields, drf-yasg
+djangorestframework==3.11.2  # via -r requirements.in, djangorestframework-csv, djangorestframework-gis, drf-amsterdam, drf-extensions, drf-hal-json, drf-nested-fields, drf-yasg
 drf-amsterdam==0.4.0      # via -r requirements.in
 drf-extensions==0.6.0     # via drf-amsterdam
 drf-hal-json==0.10.0      # via -r requirements.in
@@ -62,9 +62,9 @@ requests==2.24.0          # via coreapi, datapunt-authorization-django, keystone
 rfc3986==1.4.0            # via oslo.config
 ruamel.yaml.clib==0.2.2   # via ruamel.yaml
 ruamel.yaml==0.16.12      # via drf-yasg
-sentry-sdk==0.17.8        # via -r requirements.in
+sentry-sdk==0.18.0        # via -r requirements.in
 six==1.15.0               # via cryptography, debtcollector, djangorestframework-csv, drf-yasg, keystoneauth1, oslo.i18n, oslo.utils, packaging, python-dateutil, python-keystoneclient, python-swiftclient
-sqlparse==0.3.1           # via django
+sqlparse==0.4.1           # via django
 stevedore==3.2.2          # via keystoneauth1, oslo.config, python-keystoneclient
 unicodecsv==0.14.1        # via djangorestframework-csv
 uritemplate==3.0.1        # via coreapi, drf-yasg
