Removed pinned DRF because YASG has an update

--- a/requirements.in
+++ b/requirements.in
@@ -11,7 +11,7 @@ drf-amsterdam
 drf-yasg
 drf-hal-json
 django-filter
-djangorestframework<3.12
+djangorestframework
 djangorestframework-gis
 
 # auth
