Added link to issue preventing Django>=3.1

--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,8 @@
 # See # https://git.datapunt.amsterdam.nl/Datapunt/python-best-practices/blob/master/dependency_management/
 
 # base
+#
+# https://github.com/chibisov/drf-extensions/issues/294 prevents upgrade to >= 3.1
 Django<3.1
 psycopg2-binary
 sentry-sdk
