--- a/requirements.txt
+++ b/requirements.txt
@@ -4,19 +4,19 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-asgiref==3.3.0            # via django
+asgiref==3.3.1            # via django
 certifi==2020.11.8        # via requests, sentry-sdk
-cffi==1.14.3              # via cryptography
+cffi==1.14.4              # via cryptography
 chardet==3.0.4            # via requests
 coreapi==2.3.3            # via drf-yasg
 coreschema==0.0.4         # via coreapi, drf-yasg
 cryptography==3.2.1       # via jwcrypto
-datapunt-authorization-django==1.0.0  # via -r requirements.in
+datapunt-authorization-django==1.1.0  # via -r requirements.in
 datapunt-authorization-levels==0.1.3  # via -r requirements.in
 dateutils==0.6.12         # via -r requirements.in
 debtcollector==2.2.0      # via oslo.config, oslo.utils, python-keystoneclient
 defusedxml==0.6.0         # via djangorestframework-xml
-django-extensions==3.0.9  # via -r requirements.in
+django-extensions==3.1.0  # via -r requirements.in
 django-filter==2.4.0      # via -r requirements.in
 django==3.0.11            # via -r requirements.in, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
 djangorestframework-csv==2.1.0  # via drf-amsterdam
@@ -43,11 +43,11 @@ netaddr==0.8.0            # via oslo.config, oslo.utils
 netifaces==0.10.9         # via oslo.utils
 openpyxl==3.0.5           # via -r requirements.in
 os-service-types==1.7.0   # via keystoneauth1
-oslo.config==8.3.2        # via python-keystoneclient
+oslo.config==8.3.3        # via python-keystoneclient
 oslo.i18n==5.0.1          # via oslo.config, oslo.utils, python-keystoneclient
 oslo.serialization==4.0.1  # via python-keystoneclient
 oslo.utils==4.7.0         # via oslo.serialization, python-keystoneclient
-packaging==20.4           # via drf-yasg, oslo.utils
+packaging==20.7           # via drf-yasg, oslo.utils
 pbr==5.5.1                # via debtcollector, keystoneauth1, os-service-types, oslo.i18n, oslo.serialization, oslo.utils, python-keystoneclient, stevedore
 psycopg2-binary==2.8.6    # via -r requirements.in
 pycparser==2.20           # via cffi
@@ -57,15 +57,15 @@ python-keystoneclient==4.1.1  # via -r requirements.in
 python-swiftclient==3.10.1  # via -r requirements.in
 pytz==2020.4              # via dateutils, django, oslo.serialization, oslo.utils
 pyyaml==5.3.1             # via oslo.config
-requests==2.24.0          # via coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
+requests==2.25.0          # via coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
 rfc3986==1.4.0            # via oslo.config
 ruamel.yaml.clib==0.2.2   # via ruamel.yaml
 ruamel.yaml==0.16.12      # via drf-yasg
-sentry-sdk==0.19.2        # via -r requirements.in
-six==1.15.0               # via cryptography, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, packaging, python-dateutil, python-keystoneclient, python-swiftclient
+sentry-sdk==0.19.4        # via -r requirements.in
+six==1.15.0               # via cryptography, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, python-dateutil, python-keystoneclient, python-swiftclient
 sqlparse==0.4.1           # via django
 stevedore==3.2.2          # via keystoneauth1, oslo.config, python-keystoneclient
 unicodecsv==0.14.1        # via djangorestframework-csv
 uritemplate==3.0.1        # via coreapi, drf-yasg
-urllib3==1.25.11          # via requests, sentry-sdk
+urllib3==1.26.2           # via requests, sentry-sdk
 wrapt==1.12.1             # via debtcollector
