--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -5,25 +5,25 @@
 #    pip-compile --output-file=requirements_dev.txt requirements_dev.in
 #
 appdirs==1.4.4            # via black
-asgiref==3.3.0            # via -r ./requirements.txt, django
+asgiref==3.3.1            # via -r ./requirements.txt, django
 attrs==20.3.0             # via pytest
 backcall==0.2.0           # via ipython
 black==20.8b1             # via -r requirements_dev.in, pytest-black
 certifi==2020.11.8        # via -r ./requirements.txt, requests, sentry-sdk
-cffi==1.14.3              # via -r ./requirements.txt, cryptography
+cffi==1.14.4              # via -r ./requirements.txt, cryptography
 chardet==3.0.4            # via -r ./requirements.txt, requests
 click==7.1.2              # via black, pip-tools
 coreapi==2.3.3            # via -r ./requirements.txt, drf-yasg
 coreschema==0.0.4         # via -r ./requirements.txt, coreapi, drf-yasg
 coverage==5.3             # via pytest-cov
 cryptography==3.2.1       # via -r ./requirements.txt, jwcrypto
-datapunt-authorization-django==1.0.0  # via -r ./requirements.txt
+datapunt-authorization-django==1.1.0  # via -r ./requirements.txt
 datapunt-authorization-levels==0.1.3  # via -r ./requirements.txt
 dateutils==0.6.12         # via -r ./requirements.txt
 debtcollector==2.2.0      # via -r ./requirements.txt, oslo.config, oslo.utils, python-keystoneclient
 decorator==4.4.2          # via ipython
 defusedxml==0.6.0         # via -r ./requirements.txt, djangorestframework-xml
-django-extensions==3.0.9  # via -r ./requirements.txt
+django-extensions==3.1.0  # via -r ./requirements.txt
 django-filter==2.4.0      # via -r ./requirements.txt
 django==3.0.11            # via -r ./requirements.txt, datapunt-authorization-django, django-filter, djangorestframework, drf-hal-json, drf-nested-fields, drf-yasg
 djangorestframework-csv==2.1.0  # via -r ./requirements.txt, drf-amsterdam
@@ -37,7 +37,7 @@ drf-nested-fields==0.9.5  # via -r ./requirements.txt, drf-hal-json
 drf-yasg==1.20.0          # via -r ./requirements.txt
 et-xmlfile==1.0.1         # via -r ./requirements.txt, openpyxl
 factory-boy==3.1.0        # via -r requirements_dev.in
-faker==4.14.2             # via factory-boy
+faker==4.17.1             # via factory-boy
 flake8==3.8.4             # via pytest-flake8
 idna==2.10                # via -r ./requirements.txt, requests
 inflection==0.5.1         # via -r ./requirements.txt, drf-yasg
@@ -61,17 +61,17 @@ netaddr==0.8.0            # via -r ./requirements.txt, oslo.config, oslo.utils
 netifaces==0.10.9         # via -r ./requirements.txt, oslo.utils
 openpyxl==3.0.5           # via -r ./requirements.txt
 os-service-types==1.7.0   # via -r ./requirements.txt, keystoneauth1
-oslo.config==8.3.2        # via -r ./requirements.txt, python-keystoneclient
+oslo.config==8.3.3        # via -r ./requirements.txt, python-keystoneclient
 oslo.i18n==5.0.1          # via -r ./requirements.txt, oslo.config, oslo.utils, python-keystoneclient
 oslo.serialization==4.0.1  # via -r ./requirements.txt, python-keystoneclient
 oslo.utils==4.7.0         # via -r ./requirements.txt, oslo.serialization, python-keystoneclient
-packaging==20.4           # via -r ./requirements.txt, drf-yasg, oslo.utils, pytest
+packaging==20.7           # via -r ./requirements.txt, drf-yasg, oslo.utils, pytest
 parso==0.7.1              # via jedi
 pathspec==0.8.1           # via black
 pbr==5.5.1                # via -r ./requirements.txt, debtcollector, keystoneauth1, os-service-types, oslo.i18n, oslo.serialization, oslo.utils, python-keystoneclient, stevedore
 pexpect==4.8.0            # via ipython
 pickleshare==0.7.5        # via ipython
-pip-tools==5.3.1          # via -r requirements_dev.in
+pip-tools==5.4.0          # via -r requirements_dev.in
 pluggy==0.13.1            # via pytest
 prompt-toolkit==3.0.8     # via ipython
 psycopg2-binary==2.8.6    # via -r ./requirements.txt
@@ -93,13 +93,13 @@ python-keystoneclient==4.1.1  # via -r ./requirements.txt
 python-swiftclient==3.10.1  # via -r ./requirements.txt
 pytz==2020.4              # via -r ./requirements.txt, dateutils, django, oslo.serialization, oslo.utils
 pyyaml==5.3.1             # via -r ./requirements.txt, oslo.config
-regex==2020.10.28         # via black
-requests==2.24.0          # via -r ./requirements.txt, coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
+regex==2020.11.13         # via black
+requests==2.25.0          # via -r ./requirements.txt, coreapi, datapunt-authorization-django, keystoneauth1, oslo.config, python-keystoneclient, python-swiftclient
 rfc3986==1.4.0            # via -r ./requirements.txt, oslo.config
 ruamel.yaml.clib==0.2.2   # via -r ./requirements.txt, ruamel.yaml
 ruamel.yaml==0.16.12      # via -r ./requirements.txt, drf-yasg
-sentry-sdk==0.19.2        # via -r ./requirements.txt
-six==1.15.0               # via -r ./requirements.txt, cryptography, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, packaging, pip-tools, python-dateutil, python-keystoneclient, python-swiftclient
+sentry-sdk==0.19.4        # via -r ./requirements.txt
+six==1.15.0               # via -r ./requirements.txt, cryptography, debtcollector, djangorestframework-csv, keystoneauth1, oslo.i18n, oslo.utils, pip-tools, python-dateutil, python-keystoneclient, python-swiftclient
 sqlparse==0.4.1           # via -r ./requirements.txt, django
 stevedore==3.2.2          # via -r ./requirements.txt, keystoneauth1, oslo.config, python-keystoneclient
 text-unidecode==1.3       # via faker
@@ -109,7 +109,7 @@ typed-ast==1.4.1          # via black
 typing-extensions==3.7.4.3  # via black
 unicodecsv==0.14.1        # via -r ./requirements.txt, djangorestframework-csv
 uritemplate==3.0.1        # via -r ./requirements.txt, coreapi, drf-yasg
-urllib3==1.25.11          # via -r ./requirements.txt, requests, sentry-sdk
+urllib3==1.26.2           # via -r ./requirements.txt, requests, sentry-sdk
 wcwidth==0.2.5            # via prompt-toolkit
 wrapt==1.12.1             # via -r ./requirements.txt, debtcollector
 
