Upgraded to Django 3.1
drf-extensions finally released a new version, adding support for
Django 3.1: https://github.com/chibisov/drf-extensions/releases/tag/0.7.0

--- a/requirements.in
+++ b/requirements.in
@@ -3,8 +3,7 @@
 
 # base
 #
-# https://github.com/chibisov/drf-extensions/issues/294 prevents upgrade to >= 3.1
-Django<3.1
+Django
 psycopg2-binary
 sentry-sdk
 
