--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -6,7 +6,7 @@
 #
 appdirs==1.4.4
     # via black
-asgiref==3.3.1
+asgiref==3.3.4
     # via
     #   -r ./requirements.txt
     #   django
@@ -46,7 +46,7 @@ coreschema==0.0.4
     #   drf-yasg
 coverage==5.5
     # via pytest-cov
-cryptography==3.4.6
+cryptography==3.4.7
     # via
     #   -r ./requirements.txt
     #   jwcrypto
@@ -62,20 +62,21 @@ debtcollector==2.2.0
     #   oslo.config
     #   oslo.utils
     #   python-keystoneclient
-decorator==4.4.2
+decorator==5.0.7
     # via ipython
 defusedxml==0.7.1
     # via
     #   -r ./requirements.txt
     #   djangorestframework-xml
-django-extensions==3.1.1
+django-extensions==3.1.2
     # via -r ./requirements.txt
 django-filter==2.4.0
     # via -r ./requirements.txt
-django==3.1.7
+django==3.2
     # via
     #   -r ./requirements.txt
     #   datapunt-authorization-django
+    #   django-extensions
     #   django-filter
     #   djangorestframework
     #   drf-hal-json
@@ -91,7 +92,7 @@ djangorestframework-xml==2.0.0
     # via
     #   -r ./requirements.txt
     #   drf-amsterdam
-djangorestframework==3.12.2
+djangorestframework==3.12.4
     # via
     #   -r ./requirements.txt
     #   djangorestframework-csv
@@ -121,9 +122,9 @@ et-xmlfile==1.0.1
     #   openpyxl
 factory-boy==3.2.0
     # via -r requirements_dev.in
-faker==6.6.2
+faker==8.1.0
     # via factory-boy
-flake8==3.9.0
+flake8==3.9.1
     # via pytest-flake8
 idna==2.10
     # via
@@ -139,7 +140,7 @@ ipdb==0.13.7
     # via -r requirements_dev.in
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.21.0
+ipython==7.22.0
     # via ipdb
 iso8601==0.1.14
     # via
@@ -218,7 +219,7 @@ packaging==20.9
     #   drf-yasg
     #   oslo.utils
     #   pytest
-parso==0.8.1
+parso==0.8.2
     # via jedi
 pathspec==0.8.1
     # via black
@@ -239,11 +240,11 @@ pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.0.1
+pip-tools==6.1.0
     # via -r requirements_dev.in
 pluggy==0.13.1
     # via pytest
-prompt-toolkit==3.0.17
+prompt-toolkit==3.0.18
     # via ipython
 psycopg2-binary==2.8.6
     # via -r ./requirements.txt
@@ -257,7 +258,7 @@ pycparser==2.20
     # via
     #   -r ./requirements.txt
     #   cffi
-pyflakes==2.3.0
+pyflakes==2.3.1
     # via flake8
 pygments==2.8.1
     # via ipython
@@ -270,13 +271,13 @@ pytest-black==0.3.12
     # via -r requirements_dev.in
 pytest-cov==2.11.1
     # via -r requirements_dev.in
-pytest-django==4.1.0
+pytest-django==4.2.0
     # via -r requirements_dev.in
 pytest-flake8==1.0.7
     # via -r requirements_dev.in
 pytest-isort==1.3.0
     # via -r requirements_dev.in
-pytest==6.2.2
+pytest==6.2.3
     # via
     #   -r requirements_dev.in
     #   pytest-black
@@ -303,7 +304,7 @@ pyyaml==5.4.1
     # via
     #   -r ./requirements.txt
     #   oslo.config
-regex==2021.3.17
+regex==2021.4.4
     # via black
 requests==2.25.1
     # via
@@ -322,7 +323,7 @@ ruamel.yaml.clib==0.2.2
     # via
     #   -r ./requirements.txt
     #   ruamel.yaml
-ruamel.yaml==0.16.13
+ruamel.yaml==0.17.4
     # via
     #   -r ./requirements.txt
     #   drf-yasg
@@ -359,7 +360,7 @@ toml==0.10.2
     #   pytest-black
 traitlets==5.0.5
     # via ipython
-typed-ast==1.4.2
+typed-ast==1.4.3
     # via black
 typing-extensions==3.7.4.3
     # via black
