--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -18,7 +18,7 @@ black==21.5b1
     # via
     #   -r requirements_dev.in
     #   pytest-black
-certifi==2020.12.5
+certifi==2021.5.30
     # via
     #   -r ./requirements.txt
     #   requests
@@ -31,7 +31,7 @@ chardet==4.0.0
     # via
     #   -r ./requirements.txt
     #   requests
-click==8.0.0
+click==8.0.1
     # via
     #   black
     #   pip-tools
@@ -63,7 +63,9 @@ debtcollector==2.2.0
     #   oslo.utils
     #   python-keystoneclient
 decorator==5.0.9
-    # via ipython
+    # via
+    #   ipdb
+    #   ipython
 defusedxml==0.7.1
     # via
     #   -r ./requirements.txt
@@ -122,7 +124,7 @@ et-xmlfile==1.1.0
     #   openpyxl
 factory-boy==3.2.0
     # via -r requirements_dev.in
-faker==8.1.4
+faker==8.4.0
     # via factory-boy
 flake8==3.9.2
     # via pytest-flake8
@@ -136,11 +138,11 @@ inflection==0.5.1
     #   drf-yasg
 iniconfig==1.1.1
     # via pytest
-ipdb==0.13.7
+ipdb==0.13.8
     # via -r requirements_dev.in
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.23.1
+ipython==7.24.0
     # via ipdb
 iso8601==0.1.14
     # via
@@ -155,7 +157,7 @@ itypes==1.2.0
     #   coreapi
 jedi==0.18.0
     # via ipython
-jinja2==3.0.0
+jinja2==3.0.1
     # via
     #   -r ./requirements.txt
     #   coreschema
@@ -167,7 +169,7 @@ keystoneauth1==4.3.1
     # via
     #   -r ./requirements.txt
     #   python-keystoneclient
-markupsafe==2.0.0
+markupsafe==2.0.1
     # via
     #   -r ./requirements.txt
     #   jinja2
@@ -186,7 +188,7 @@ netaddr==0.8.0
     #   -r ./requirements.txt
     #   oslo.config
     #   oslo.utils
-netifaces==0.10.9
+netifaces==0.11.0
     # via
     #   -r ./requirements.txt
     #   oslo.utils
@@ -325,7 +327,7 @@ ruamel.yaml.clib==0.2.2
     # via
     #   -r ./requirements.txt
     #   ruamel.yaml
-ruamel.yaml==0.17.4
+ruamel.yaml==0.17.6
     # via
     #   -r ./requirements.txt
     #   drf-yasg
@@ -374,7 +376,7 @@ uritemplate==3.0.1
     #   -r ./requirements.txt
     #   coreapi
     #   drf-yasg
-urllib3==1.26.4
+urllib3==1.26.5
     # via
     #   -r ./requirements.txt
     #   requests
