--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-asgiref==3.3.4
+asgiref==3.4.0
     # via django
 certifi==2021.5.30
     # via
@@ -35,11 +35,13 @@ debtcollector==2.2.0
     #   python-keystoneclient
 defusedxml==0.7.1
     # via djangorestframework-xml
+deprecated==1.2.12
+    # via jwcrypto
 django-extensions==3.1.3
     # via -r requirements.in
 django-filter==2.4.0
     # via -r requirements.in
-django==3.2.3
+django==3.2.4
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
@@ -89,7 +91,7 @@ itypes==1.2.0
     # via coreapi
 jinja2==3.0.1
     # via coreschema
-jwcrypto==0.8
+jwcrypto==0.9.1
     # via
     #   -r requirements.in
     #   datapunt-authorization-django
@@ -118,7 +120,7 @@ oslo.i18n==5.0.1
     #   python-keystoneclient
 oslo.serialization==4.1.0
     # via python-keystoneclient
-oslo.utils==4.9.0
+oslo.utils==4.9.1
     # via
     #   oslo.serialization
     #   python-keystoneclient
@@ -136,7 +138,7 @@ pbr==5.6.0
     #   oslo.utils
     #   python-keystoneclient
     #   stevedore
-psycopg2-binary==2.8.6
+psycopg2-binary==2.9.1
     # via -r requirements.in
 pycparser==2.20
     # via cffi
@@ -148,7 +150,7 @@ python-dateutil==2.8.1
     # via dateutils
 python-keystoneclient==4.2.0
     # via -r requirements.in
-python-swiftclient==3.11.1
+python-swiftclient==3.12.0
     # via -r requirements.in
 pytz==2021.1
     # via
@@ -168,9 +170,9 @@ requests==2.25.1
     #   python-swiftclient
 rfc3986==1.5.0
     # via oslo.config
-ruamel.yaml.clib==0.2.2
+ruamel.yaml.clib==0.2.4
     # via ruamel.yaml
-ruamel.yaml==0.17.6
+ruamel.yaml==0.17.10
     # via drf-yasg
 sentry-sdk==1.1.0
     # via -r requirements.in
@@ -178,6 +180,7 @@ six==1.16.0
     # via
     #   debtcollector
     #   djangorestframework-csv
+    #   jwcrypto
     #   keystoneauth1
     #   oslo.i18n
     #   python-dateutil
@@ -196,9 +199,11 @@ uritemplate==3.0.1
     # via
     #   coreapi
     #   drf-yasg
-urllib3==1.26.5
+urllib3==1.26.6
     # via
     #   requests
     #   sentry-sdk
 wrapt==1.12.1
-    # via debtcollector
+    # via
+    #   debtcollector
+    #   deprecated
